# DodoDash

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: audio.h  glmhelper.h  input.h  random.h  timer.h
resources/maps/: beach.tsx  jungle.tsx  level1.tmx  level2.tmx  level3.tmx  mountain.tsx  switching.tsx
resources/resource/: cmp-resource.bat
resources/shaders/: 3D-lighting.vert  blinnphong.frag  cmpShader.bat  fblinnphong.spv  ffinal.spv  fflat.spv  final.frag  final.vert  flat.frag  flat.vert  v3D-lighting.spv  vflat.spv
src/: animation.h  app.cpp  app.h  background.h  bullet.cpp  bullet.h  button.h  camera.cpp  camera.h  crab.cpp  crab.h  cutscene.h  gamehelper.h  main.cpp  map.cpp  map.h  mapobj.h  menu.h  particle.cpp  particle.h  player.cpp  player.h  poacher.cpp  poacher.h  tiled.cpp  tiled.h
src/vulkan-render/: config.h  descriptor_sets.h  model_loader.cpp  model_loader.h  pipeline.h  render.cpp  render.h  render_structs.h  stb_image.cpp  texfont.cpp  texfont.h  texture_loader.cpp  texture_loader.h  vkhelper.cpp  vkhelper.h  vkinit.cpp  vkinit.h
